fix: aligned header block and corrected the profile information

--- a/style.css
+++ b/style.css
@@ -11,16 +11,17 @@
 }
 #name {
     text-align: center;
-    font: oblique normal 25px 'Century Gothic', sans-serif;
+    font: oblique normal 40px 'Century Gothic', sans-serif;
     color: rgb(6, 17, 82);
     width: 700px;
-    height: 50px;
-    padding: 80px;
+    height: 30px;
+    padding: 50px 80px 0px 80px;
 }
 #function {
     text-align: center;
-    font: oblique bold 40px 'Century Gothic', sans-serif;
-    color: rgb(27, 22, 15);
+    font: oblique normal 25px 'Century Gothic', sans-serif;
+    color: rgb(6, 17, 82);
+    padding: 0px 80px 50px 80px;
 }
 .photo {
     float:left;
